fix price on desktop and home icons on mobile

--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -298,6 +298,7 @@
       .flexRowContent--two-cols {
         flex-direction: row;
         justify-content: flex-start;
+        padding-right: 0;
       }
     }
   }
